--- a/TillApp/TillApp/TillApp/FoodPage.xaml
+++ b/TillApp/TillApp/TillApp/FoodPage.xaml
@@ -93,15 +93,10 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <!-- Username label & Sign in/Sign out buttons -->
-                <Label x:Name="UserLabel" Text="Username" Style="{StaticResource LabelStyle}" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" />
-                <Button Text="Sign In" Clicked="Button_OnClicked" Style="{StaticResource ButtonStyle}" Grid.Row="1" Grid.Column="0" />
-                <Button Text="Logout" Clicked="Button_OnClicked" Style="{StaticResource ButtonStyle}" Grid.Row="1" Grid.Column="1" />
+                <!-- Signed in/Sign out buttons -->
+                <Button Text="Signed In" Style="{StaticResource ButtonStyle}" Grid.Row="1" Grid.Column="0" />
+                <Button Text="Logout" Clicked="SignOut" Style="{StaticResource ButtonStyle}" Grid.Row="1" Grid.Column="1" />
             </Grid>
-            <!-- Total Cost label -->
-            <StackLayout VerticalOptions="FillAndExpand" Grid.Row="0" Grid.Column="1" >
-                <Label x:Name="TotalCostLabel" Text="Total&#x0a;€50.00" Style="{StaticResource LabelStyle}" VerticalOptions="FillAndExpand" />
-            </StackLayout>
         </Grid>
 
 
